force-app/main/default/objects/Booking_Request__c/fields/Arrival_City__c.field-meta.xml
<CustomField>
    <fullName>Arrival_City__c</fullName>
    <label>Arrival City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>