force-app/main/default/objects/Booking_Request__c/fields/FlightListing__c.field-meta.xml
<CustomField>
    <fullName>FlightListing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlightListing</label>
    <referenceTo>FlightListing__c</referenceTo>
    <relationshipLabel>Booking Requests</relationshipLabel>
    <relationshipName>Booking_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>