force-app/main/default/objects/Booking_Request__c/fields/Hotel_City__c.field-meta.xml
<CustomField>
    <fullName>Hotel_City__c</fullName>
    <description>Hotel City</description>
    <formula>HotelListing__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hotel City</inlineHelpText>
    <label>Hotel City</label>
    <type>Text</type>
</CustomField>