force-app/main/default/objects/Booking_Request__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <description>Hotel Name</description>
    <formula>HotelListing__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hotel ame</inlineHelpText>
    <label>Hotel Name</label>
    <type>Text</type>
</CustomField>