force-app/main/default/objects/Booking_Request__c/fields/HotelListing__c.field-meta.xml
<CustomField>
    <fullName>HotelListing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HotelListing</label>
    <referenceTo>HotelListing__c</referenceTo>
    <relationshipLabel>Booking Requests</relationshipLabel>
    <relationshipName>Booking_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>