force-app/main/default/objects/Booking_Request__c/fields/Itinerary_Request__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary Request</label>
    <referenceTo>Itinerary_Request__c</referenceTo>
    <relationshipLabel>Booking Requests</relationshipLabel>
    <relationshipName>Booking_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>