force-app/main/default/objects/Booking_Request__c/fields/Number_of_Person_Stay_in_the_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Person_Stay_in_the_Hotel__c</fullName>
    <label>Number of Person Stay in the Hotel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>