force-app/main/default/objects/Booking_Request__c/fields/Price_Of_Flight__c.field-meta.xml
<CustomField>
    <fullName>Price_Of_Flight__c</fullName>
    <label>Price Of Flight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>